make quarkus showcase work

--- a/cnj-resilience-backend-quarkus/pom.xml
+++ b/cnj-resilience-backend-quarkus/pom.xml
@@ -118,9 +118,22 @@
             <artifactId>quarkus-resteasy-jsonb</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-jwt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-rest-client</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>group.msg.at.cloud.common</groupId>
+            <artifactId>cnj-common-rest-jee</artifactId>
+            <version>${common.rest.version}</version>
         </dependency>
         <!-- showcase specific section -->
         <!-- =========================== -->
