--- a/cnj-resilience-backend-quarkus/src/test/docker/cnj-resilience-backend-quarkus/docker-compose.yml
+++ b/cnj-resilience-backend-quarkus/src/test/docker/cnj-resilience-backend-quarkus/docker-compose.yml
@@ -8,6 +8,13 @@ version: '3'
 
 services:
 
+  downstream-a:
+    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-resilience-downstream-a:latest
+
+  downstream-b:
+    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-resilience-downstream-b:latest
+
+
   backend:
     image: ${docker.image.name}:${project.version}
     ports:
@@ -15,3 +22,6 @@ services:
       - "38089:8089"
     environment:
       JAVA_OPTS: "-javaagent:/home/quarkus/org.jacoco.agent.jar=output=tcpserver,address=*,port=8089"
+      CLOUDTRAIN_SERVICES_RECOMMENDATIONS_MP_REST_URL: "http://downstream-a:8080"
+      CLOUDTRAIN_SERVICES_WATCHLIST_MP_REST_URL: "http://downstream-b:8080"
+      CLOUDTRAIN_COMMON_REST_TRACE_ENABLED: "true"
