--- a/cnj-resilience-backend-spring/src/main/helm/cnj-resilience-backend-spring/values.yaml
+++ b/cnj-resilience-backend-spring/src/main/helm/cnj-resilience-backend-spring/values.yaml
@@ -49,3 +49,14 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+cloudtrain:
+  services:
+    recommendations:
+      url: "http://cnj-resilience-downstream-a"
+    watchlist:
+      url: "http://cnj-resilience-downstream-b"
+  common:
+    rest:
+      trace:
+        enabled: true
