finished microprofile showcase

--- a/cnj-resilience-backend-micro/pom.xml
+++ b/cnj-resilience-backend-micro/pom.xml
@@ -138,6 +138,10 @@
             <version>${common.rest.version}</version>
         </dependency>
         <!-- showcase specific section -->
+        <dependency>
+            <groupId>org.eclipse.microprofile.fault-tolerance</groupId>
+            <artifactId>microprofile-fault-tolerance-api</artifactId>
+        </dependency>
         <!-- =========================== -->
         <!-- test time dependencies      -->
         <!-- =========================== -->
