--- a/cnj-resilience-backend-javaee/src/test/docker/cnj-resilience-backend-javaee/docker-compose.yml
+++ b/cnj-resilience-backend-javaee/src/test/docker/cnj-resilience-backend-javaee/docker-compose.yml
@@ -9,7 +9,7 @@ version: '3'
 services:
 
   backend:
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-resilience-backend-javaee:${project.version}
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-resilience-backend-javaee:${project.version}
     ports:
       - "38080:8080"
 
