--- a/cnj-resilience-backend-quarkus/src/test/docker/cnj-resilience-backend-quarkus/docker-compose.yml
+++ b/cnj-resilience-backend-quarkus/src/test/docker/cnj-resilience-backend-quarkus/docker-compose.yml
@@ -9,10 +9,10 @@ version: '3'
 services:
 
   downstream-a:
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-resilience-downstream-a:latest
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-resilience-downstream-a:latest
 
   downstream-b:
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-resilience-downstream-b:latest
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-resilience-downstream-b:latest
 
 
   backend:
