--- a/.drone.yml
+++ b/.drone.yml
@@ -5,64 +5,64 @@ name: cnj-resilience-build
 
 steps:
   - name: downstream-a-commit-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean deploy -f cnj-resilience-downstream-a/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-downstream-a/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
   - name: downstream-a-integration-test-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     commands:
       - mvn clean verify -f cnj-resilience-downstream-a/pom.xml -B -ff -e -V -U -P integration-test-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
   - name: downstream-b-commit-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean deploy -f cnj-resilience-downstream-b/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-downstream-b/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
   - name: downstream-b-integration-test-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     commands:
       - mvn clean verify -f cnj-resilience-downstream-b/pom.xml -B -ff -e -V -U -P integration-test-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
 #  - name: javaee-commit-stage
-#    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+#    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
 #    privileged: true
 #    commands:
 #      - start-docker.sh
-#      - mvn clean deploy -f cnj-resilience-backend-javaee/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+#      - mvn clean install -f cnj-resilience-backend-javaee/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
 #  - name: javaee-integration-test-stage
-#    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+#    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
 #    commands:
 #      - mvn clean verify -f cnj-resilience-backend-javaee/pom.xml -B -ff -e -V -U -P integration-test-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
   - name: micro-commit-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean deploy -f cnj-resilience-backend-micro/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-backend-micro/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
   - name: micro-integration-test-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     privileged: true
     commands:
       - start-docker.sh
       - mvn clean verify -f cnj-resilience-backend-micro/pom.xml -B -ff -e -V -U -P integration-test-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
   - name: spring-commit-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean deploy -f cnj-resilience-backend-spring/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-backend-spring/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
   - name: spring-integration-test-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     commands:
       - mvn clean verify -f cnj-resilience-backend-spring/pom.xml -B -ff -e -V -U -P integration-test-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
   - name: quarkus-commit-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean deploy -f cnj-resilience-backend-quarkus/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-backend-quarkus/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
   - name: quarkus-integration-test-stage
-    image: docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/cnj-drone-build:1.1.0
+    image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     commands:
       - mvn clean verify -f cnj-resilience-backend-quarkus/pom.xml -B -ff -e -V -U -P integration-test-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
