--- a/cnj-resilience-backend-micro/src/main/docker/Dockerfile
+++ b/cnj-resilience-backend-micro/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/at41-docker-jre11:2.1.0
+FROM docker.cloudtrain.aws.msgoat.eu/cloudtrain/at41-docker-jre11:3.0.0
 
 LABEL maintainer="michael.theis@msg.group" \
         ${project.groupId}.${project.artifactId}.project="CloudTrain" \
@@ -33,7 +33,8 @@ RUN chown payara:payara /docker-entrypoint.sh \
     && chmod u+x /docker-entrypoint.sh \
     && chown -R payara:payara ${ARG_JAVA_APPLICATION_HOME}
 
-USER payara
+# use user ID instead of user name to allow kubernetes to check non-root users
+USER 1000
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["start"]
