--- a/cnj-resilience-backend-micro/src/main/helm/cnj-resilience-backend-micro/templates/deployment.yaml
+++ b/cnj-resilience-backend-micro/src/main/helm/cnj-resilience-backend-micro/templates/deployment.yaml
@@ -3,60 +3,85 @@ kind: Deployment
 metadata:
   name: {{ include "cnj-resilience-backend-micro.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "cnj-resilience-backend-micro.name" . }}
-    helm.sh/chart: {{ include "cnj-resilience-backend-micro.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "cnj-resilience-backend-micro.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.pod.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "cnj-resilience-backend-micro.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      {{- include "cnj-resilience-backend-micro.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      labels:
-        app.kubernetes.io/name: {{ include "cnj-resilience-backend-micro.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+      {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- if .Values.metrics.enabled }}
+      {{- if not .Values.metrics.serviceMonitor.enabled }}
+        prometheus.io/scrape: "true"
+        prometheus.io/path: {{ .Values.metrics.path }}
+        prometheus.io/port: "8080"
+      {{- end }}
+      {{- end }}
+     labels:
+        {{- include "cnj-resilience-backend-micro.selectorLabels" . | nindent 8 }}
     spec:
+      {{- with .Values.pod.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      serviceAccountName: {{ include "cnj-resilience-backend-micro.serviceAccountName" . }}
+      securityContext:
+        {{- toYaml .Values.pod.securityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            {{- toYaml .Values.container.main.securityContext | nindent 12 }}
+          image: "{{ .Values.container.main.image.repository }}:{{ .Values.container.main.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.container.main.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.container.main.ports.http.number }}
               protocol: TCP
+          livenessProbe:
+            httpGet:
+              path: {{ .Values.container.main.probes.liveness.path }}
+              port: http
+          readinessProbe:
+            httpGet:
+              path: {{ .Values.container.main.probes.readiness.path }}
+              port: http
+          resources:
+            {{- toYaml .Values.container.main.resources | nindent 12 }}
           env:
+            - name: MP_JWT_VERIFY_PUBLICKEY_LOCATION
+              value: {{ .Values.security.oidc.jwksUri | quote }}
+            - name: MP_JWT_VERIFY_ISSUER
+              value: {{ .Values.security.oidc.issuer | quote }}
             - name: CLOUDTRAIN_SERVICES_RECOMMENDATIONS_MP_REST_URL
               value: {{ .Values.cloudtrain.services.recommendations.url }}
             - name: CLOUDTRAIN_SERVICES_WATCHLIST_MP_REST_URL
               value: {{ .Values.cloudtrain.services.watchlist.url }}
             - name: CLOUDTRAIN_COMMON_REST_TRACE_ENABLED
-              value: {{ .Values.cloudtrain.common.rest.trace.enabled }}
-          livenessProbe:
-            httpGet:
-              path: {{ .Values.probes.liveness.path }}
-              port: http
-          readinessProbe:
-            httpGet:
-              path: {{ .Values.probes.readiness.path }}
-              port: http
-          resources:
-            {{- toYaml .Values.resources | nindent 12 }}
-{{- if .Values.image.pullSecret }}
-      imagePullSecrets:
-        - name: {{ .Values.image.pullSecret }}
-{{- end }}
-{{- with .Values.nodeSelector }}
+              value: {{ .Values.cloudtrain.common.rest.trace.enabled | quote  }}
+            - name: JAEGER_ENABLED
+              value: {{ .Values.tracing.enabled | quote }}
+            - name: JAEGER_AGENT_HOST
+              value: {{ .Values.tracing.jaeger.agent.host | quote }}
+            - name: JAEGER_AGENT_PORT
+              value: {{ .Values.tracing.jaeger.agent.port | quote }}
+            - name: JAEGER_REPORTER_LOG_SPANS
+              value: {{ .Values.tracing.jaeger.logsSpans | quote }}
+      {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-    {{- with .Values.affinity }}
+      {{- with .Values.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.tolerations }}
+      {{- end }}
+      {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
     {{- end }}
