--- a/cnj-resilience-backend-micro/src/main/helm/cnj-resilience-backend-micro/templates/ingress.yaml
+++ b/cnj-resilience-backend-micro/src/main/helm/cnj-resilience-backend-micro/templates/ingress.yaml
@@ -1,43 +1,26 @@
-{{- if .Values.ingress.enabled -}}
+{{- if and .Values.ingress.enabled (eq .Values.ingress.type "default") -}}
 {{- $fullName := include "cnj-resilience-backend-micro.fullname" . -}}
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    app.kubernetes.io/name: {{ include "cnj-resilience-backend-micro.name" . }}
-    helm.sh/chart: {{ include "cnj-resilience-backend-micro.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "cnj-resilience-backend-micro.labels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
 spec:
-{{- if .Values.ingress.tls }}
-  tls:
-  {{- range .Values.ingress.tls }}
-    - hosts:
-      {{- range .hosts }}
-        - {{ . | quote }}
-      {{- end }}
-      secretName: {{ .secretName }}
-  {{- end }}
-{{- end }}
+  ingressClassName: {{ .Values.ingress.class }}
   rules:
-{{- range .Values.ingress.rules }}
-  {{- if .host }}
-    - host: {{ .host | quote }}
+    - host: {{ .Values.ingress.host | quote }}
       http:
-  {{- else }}
-    - http:
-  {{- end }}
         paths:
-        {{- range .paths }}
-          - path: {{ . }}
+          - path: {{ .Values.ingress.path }}
+            pathType: {{ .Values.ingress.pathType }}
             backend:
-              serviceName: {{ $fullName }}
-              servicePort: http
-        {{- end }}
-{{- end }}
+              service:
+                name: {{ $fullName }}
+                port:
+                  name: http
 {{- end }}
