--- a/cnj-resilience-backend-micro/src/main/helm/cnj-resilience-backend-micro/templates/networkpolicy.yaml
+++ b/cnj-resilience-backend-micro/src/main/helm/cnj-resilience-backend-micro/templates/networkpolicy.yaml
@@ -3,15 +3,11 @@ kind: NetworkPolicy
 metadata:
   name: {{ include "cnj-resilience-backend-micro.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "cnj-resilience-backend-micro.name" . }}
-    helm.sh/chart: {{ include "cnj-resilience-backend-micro.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+  {{- include "cnj-resilience-backend-micro.labels" . | nindent 4 }}
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "cnj-resilience-backend-micro.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      {{- include "cnj-resilience-backend-micro.selectorLabels" . | nindent 6 }}
   policyTypes:
     - Ingress
   ingress:
