--- a/cnj-resilience-backend-quarkus/pom.xml
+++ b/cnj-resilience-backend-quarkus/pom.xml
@@ -18,13 +18,13 @@
         <!-- common logging dependencies -->
         <slf4j.version>1.7.30</slf4j.version>
         <!-- common rest dependencies -->
-        <common.rest.version>1.0.0</common.rest.version>
+        <common.rest.version>1.1.0</common.rest.version>
         <!-- common test dependencies -->
         <junit.version>5.6.0</junit.version>
         <restassured.version>3.3.0</restassured.version>
         <cnj.common.test.version>2.0.0</cnj.common.test.version>
         <!-- docker related properties -->
-        <docker.registry.name>docker.at41tools.k8s.aws.msgoat.eu</docker.registry.name>
+        <docker.registry.name>docker.cloudtrain.aws.msgoat.eu</docker.registry.name>
         <docker.organization.name>cloudtrain</docker.organization.name>
         <docker.image.name>${docker.registry.name}/${docker.organization.name}/${project.artifactId}</docker.image.name>
         <docker.removeMode>all</docker.removeMode>
@@ -32,9 +32,9 @@
         <docker.verbose>true</docker.verbose>
         <docker.test.target.route>http://localhost:38080</docker.test.target.route>
         <!-- kubernetes related properties -->
-        <k8s.cluster.route>https://apps.at41tools.k8s.aws.msgoat.eu</k8s.cluster.route>
+        <k8s.cluster.route>https://apps.cloudtrain.aws.msgoat.eu</k8s.cluster.route>
         <k8s.cluster.namespace>default</k8s.cluster.namespace>
-        <k8s.ingress.host></k8s.ingress.host>
+        <k8s.ingress.host>apps.cloudtrain.aws.msgoat.eu</k8s.ingress.host>
         <k8s.ingress.path>/${k8s.cluster.namespace}/${project.artifactId}</k8s.ingress.path>
         <k8s.test.target.route>${k8s.cluster.route}${k8s.ingress.path}</k8s.test.target.route>
         <!-- pinning versions of common maven plugins -->
@@ -55,12 +55,12 @@
         <maven.war.plugin.version>3.2.3</maven.war.plugin.version>
         <maven.quarkus.plugin.version>${quarkus.version}</maven.quarkus.plugin.version>
         <!-- pinning versions of cloud native specific maven plugins -->
-        <maven.compose.plugin.version>1.0.0</maven.compose.plugin.version>
+        <maven.compose.plugin.version>2.0.0</maven.compose.plugin.version>
         <maven.docker.plugin.version>0.33.0</maven.docker.plugin.version>
-        <maven.helm.plugin.version>2.1.0</maven.helm.plugin.version>
+        <maven.helm.plugin.version>3.0.0</maven.helm.plugin.version>
         <!-- quality assurance properties -->
         <maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
-        <sonar.host.url>https://sonarqube.at41tools.k8s.aws.msgoat.eu</sonar.host.url>
+        <sonar.host.url>https://sonarqube.cloudtrain.aws.msgoat.eu</sonar.host.url>
         <maven.jacoco.plugin.version>0.8.6</maven.jacoco.plugin.version>
         <jacoco.address>localhost</jacoco.address>
         <jacoco.port>38089</jacoco.port>
@@ -946,9 +946,9 @@
     </profiles>
     <distributionManagement>
         <repository>
-            <id>at41-maven-repository</id>
-            <name>msg Automotive AT Maven Releases Repository</name>
-            <url>https://nexus.at41tools.k8s.aws.msgoat.eu/repository/maven-releases/</url>
+            <id>cloudtrain-maven-repository</id>
+            <name>msg Automotive CloudTrain Releases Repository</name>
+            <url>https://nexus.cloudtrain.aws.msgoat.eu/repository/cloudtrain-releases/</url>
         </repository>
     </distributionManagement>
 </project>
