--- a/cnj-resilience-backend-quarkus/src/main/docker/Dockerfile
+++ b/cnj-resilience-backend-quarkus/src/main/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.at41tools.k8s.aws.msgoat.eu/cloudtrain/at41-docker-jre11:2.1.0
+FROM docker.cloudtrain.aws.msgoat.eu/cloudtrain/at41-docker-jre11:3.0.0
 
 LABEL maintainer="michael.theis@msg.group" \
         ${project.groupId}.${project.artifactId}.project="CloudTrain" \
@@ -31,7 +31,8 @@ RUN chown quarkus:quarkus /docker-entrypoint.sh \
     && chmod u+x /docker-entrypoint.sh \
     && chown -R quarkus:quarkus ${ARG_JAVA_APPLICATION_HOME}
 
-USER quarkus
+# use user ID instead of user name to allow kubernetes to check non-root users
+USER 1000
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["start"]
