--- a/cnj-resilience-backend-quarkus/src/main/helm/cnj-resilience-backend-quarkus/Chart.yaml
+++ b/cnj-resilience-backend-quarkus/src/main/helm/cnj-resilience-backend-quarkus/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v2
-appVersion: "${project.version}"
-description: "${project.description}"
 name: cnj-resilience-backend-quarkus
-version: 0.8.0
+description: "${project.description}"
+type: application
+version: 4.0.0
+appVersion: "${project.version}"
