--- a/cnj-resilience-downstream-a/src/main/helm/cnj-resilience-downstream-a/templates/deployment.yaml
+++ b/cnj-resilience-downstream-a/src/main/helm/cnj-resilience-downstream-a/templates/deployment.yaml
@@ -1,60 +1,76 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "cnj-resilience-backend-spring.fullname" . }}
+  name: {{ include "cnj-resilience-downstream-a.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "cnj-resilience-backend-spring.name" . }}
-    helm.sh/chart: {{ include "cnj-resilience-backend-spring.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "cnj-resilience-downstream-a.labels" . | nindent 4 }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  {{- if not .Values.autoscaling.enabled }}
+  replicas: {{ .Values.pod.replicaCount }}
+  {{- end }}
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "cnj-resilience-backend-spring.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      {{- include "cnj-resilience-downstream-a.selectorLabels" . | nindent 6 }}
   template:
     metadata:
+      {{- with .Values.podAnnotations }}
+      annotations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       labels:
-        app.kubernetes.io/name: {{ include "cnj-resilience-backend-spring.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        {{- include "cnj-resilience-downstream-a.selectorLabels" . | nindent 8 }}
     spec:
+      {{- with .Values.pod.imagePullSecrets }}
+      imagePullSecrets:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      serviceAccountName: {{ include "cnj-resilience-downstream-a.serviceAccountName" . }}
+      securityContext:
+        {{- toYaml .Values.pod.securityContext | nindent 8 }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          securityContext:
+            {{- toYaml .Values.container.main.securityContext | nindent 12 }}
+          image: "{{ .Values.container.main.image.repository }}:{{ .Values.container.main.image.tag | default .Chart.AppVersion }}"
+          imagePullPolicy: {{ .Values.container.main.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: {{ .Values.container.main.ports.http.number }}
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: {{ .Values.probes.liveness.path }}
+              path: {{ .Values.container.main.probes.liveness.path }}
               port: http
           readinessProbe:
             httpGet:
-              path: {{ .Values.probes.readiness.path }}
+              path: {{ .Values.container.main.probes.readiness.path }}
               port: http
           resources:
-            {{- toYaml .Values.resources | nindent 12 }}
+            {{- toYaml .Values.container.main.resources | nindent 12 }}
           env:
             - name: SPRING_PROFILES_ACTIVE
               value: cloud
-            - name: CNAP_CLOUD
-              value: kubernetes
-{{- if .Values.image.pullSecret }}
-      imagePullSecrets:
-        - name: {{ .Values.image.pullSecret }}
-{{- end }}
-{{- with .Values.nodeSelector }}
+            - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWK_SET_URI
+              value: {{ .Values.security.oidc.jwksUri | quote }}
+            - name: SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER_URI
+              value: {{ .Values.security.oidc.issuer | quote }}
+            - name: OPENTRACING_JAEGER_ENABLED
+              value: {{ .Values.tracing.enabled | quote }}
+            - name: OPENTRACING_JAEGER_UDP_SENDER_HOST
+              value: {{ .Values.tracing.jaeger.agent.host | quote }}
+            - name: OPENTRACING_JAEGER_UDP_SENDER_PORT
+              value: {{ .Values.tracing.jaeger.agent.port | quote }}
+            - name: OPENTRACING_JAEGER_LOGSPANS
+              value: {{ .Values.tracing.jaeger.logSpans | quote }}
+      {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-    {{- with .Values.affinity }}
+      {{- with .Values.affinity }}
       affinity:
         {{- toYaml . | nindent 8 }}
-    {{- end }}
-    {{- with .Values.tolerations }}
+      {{- end }}
+      {{- with .Values.tolerations }}
       tolerations:
         {{- toYaml . | nindent 8 }}
     {{- end }}
