--- a/cnj-resilience-downstream-a/src/main/helm/cnj-resilience-downstream-a/templates/service.yaml
+++ b/cnj-resilience-downstream-a/src/main/helm/cnj-resilience-downstream-a/templates/service.yaml
@@ -1,12 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "cnj-resilience-backend-spring.fullname" . }}
+  name: {{ include "cnj-resilience-downstream-a.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "cnj-resilience-backend-spring.name" . }}
-    helm.sh/chart: {{ include "cnj-resilience-backend-spring.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+    {{- include "cnj-resilience-downstream-a.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -15,5 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app.kubernetes.io/name: {{ include "cnj-resilience-backend-spring.name" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
+    {{- include "cnj-resilience-downstream-a.selectorLabels" . | nindent 4 }}
