--- a/cnj-resilience-downstream-b/src/main/helm/cnj-resilience-downstream-b/Chart.yaml
+++ b/cnj-resilience-downstream-b/src/main/helm/cnj-resilience-downstream-b/Chart.yaml
@@ -1,5 +1,6 @@
-apiVersion: v1
-appVersion: "${project.version}"
+apiVersion: v2
+name: cnj-resilience-downstream-b
 description: "${project.description}"
-name: cnj-resilience-backend-spring
-version: 3.0.0
+type: application
+version: 4.0.0
+appVersion: "${project.version}"
