--- a/cnj-resilience-downstream-b/src/main/helm/cnj-resilience-downstream-b/templates/networkpolicy.yaml
+++ b/cnj-resilience-downstream-b/src/main/helm/cnj-resilience-downstream-b/templates/networkpolicy.yaml
@@ -1,17 +1,13 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: {{ include "cnj-resilience-backend-spring.fullname" . }}
+  name: {{ include "cnj-resilience-downstream-b.fullname" . }}
   labels:
-    app.kubernetes.io/name: {{ include "cnj-resilience-backend-spring.name" . }}
-    helm.sh/chart: {{ include "cnj-resilience-backend-spring.chart" . }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
+  {{- include "cnj-resilience-downstream-b.labels" . | nindent 4 }}
 spec:
   podSelector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "cnj-resilience-backend-spring.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      {{- include "cnj-resilience-downstream-b.selectorLabels" . | nindent 6 }}
   policyTypes:
     - Ingress
   ingress:
