--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,10 @@ steps:
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean install -f cnj-resilience-downstream-a/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-downstream-a/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8} -Dsonar.login=$SONARQUBE_TOKEN
+    environment:
+      SONARQUBE_TOKEN:
+        from_secret: sonarqube_token
   - name: downstream-a-integration-test-stage
     image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     commands:
@@ -19,7 +22,10 @@ steps:
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean install -f cnj-resilience-downstream-b/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-downstream-b/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8} -Dsonar.login=$SONARQUBE_TOKEN
+    environment:
+      SONARQUBE_TOKEN:
+        from_secret: sonarqube_token
   - name: downstream-b-integration-test-stage
     image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     commands:
@@ -29,7 +35,10 @@ steps:
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean install -f cnj-resilience-backend-micro/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-backend-micro/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8} -Dsonar.login=$SONARQUBE_TOKEN
+    environment:
+      SONARQUBE_TOKEN:
+        from_secret: sonarqube_token
   - name: micro-integration-test-stage
     image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     privileged: true
@@ -41,7 +50,10 @@ steps:
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean install -f cnj-resilience-backend-spring/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-backend-spring/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8} -Dsonar.login=$SONARQUBE_TOKEN
+    environment:
+      SONARQUBE_TOKEN:
+        from_secret: sonarqube_token
   - name: spring-integration-test-stage
     image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     commands:
@@ -51,7 +63,10 @@ steps:
     privileged: true
     commands:
       - start-docker.sh
-      - mvn clean install -f cnj-resilience-backend-quarkus/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8}
+      - mvn clean install -f cnj-resilience-backend-quarkus/pom.xml -B -ff -e -V -U -P commit-stage -Dchangelist=.${DRONE_BRANCH} -Dsha1=.${DRONE_COMMIT_SHA:0:8} -Dsonar.login=$SONARQUBE_TOKEN
+    environment:
+      SONARQUBE_TOKEN:
+        from_secret: sonarqube_token
   - name: quarkus-integration-test-stage
     image: docker.cloudtrain.aws.msgoat.eu/cloudtrain/cnj-drone-build:2.0.2
     commands:
